<resources>
    <!-- Login Activity -->
    <string name="app_name">Bankapp</string>
    <string name="user_name">User Name</string>
    <string name="psw">PassWord</string>
    <string name="rememberme">Remember Me</string>
    <string name="btn_login">Login</string>
    <string name="signup_text">You don\'t have an account</string>
    <string name="btn_signin">Sign In</string>

    <!-- sign in Activity -->
    <string name="login_text">You have an account</string>


    <string name="title_activity_agance_maps">AganceMapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_language">Change Language</string>
    <string name="transactions">Transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="account">account :</string>
    <string name="reference">reference :</string>
    <string name="description">description :</string>
    <string name="date">Date :</string>
    <string name="amount">amount :</string>
    <string name="balance">balance :</string>
    <string name="msg_hint">Type your message here</string>
    <string name="send_msg">Send Msg</string>
    <string name="send_btn">Send</string>
    <string name="agance_locations">Agance Locationss</string>
    <string name="click_a_mark">Click a mark to get numbre</string>
    <string name="make_a_call">Make a CAll</string>


    <string name="Choose_a_marker">Please Choose a Marker !!</string>

    <string name="allow_permission">Please Allow Permission !!</string>
    <string name="login_info_err_msg">username or psw Incorrect !!</string>
    <string name="hello_msg">Hello :)</string>
    <string name="msg_err">Please Fill msg Content !!</string>
    <string name="sms_err">Can\'t resolve app for ACTION_SENDTO Intent</string>
    <string name="user_info_err">Please Fill User Info !!</string>
    <string name="add_succ">Added Successfully :)</string>
    <string name="failed">Failed</string>


</resources>