<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendMsgActivity"
    android:background="@drawable/send_sms_bg">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/trans2">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frg_top_icons"
            android:name="com.example.bankapp.TopIconsFragment"
            />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/send_msg"
            android:textColor="@color/color_60"
            android:textSize="60dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MA :"
            android:textSize="30dp"
            android:textColor="@color/color_10"/>
        <EditText
            android:id="@+id/txt_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="212 612345678"
            android:textSize="30dp"
            android:enabled="false"
            android:textColor="@color/color_60"
            android:backgroundTint="@color/color_60"/>

    </LinearLayout>

        <EditText
            android:id="@+id/txt_msg_cont"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/color_60"
            android:backgroundTint="@color/color_60"
            android:textColorHint="@color/color_60"
            android:hint="@string/msg_hint"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:textColor="@color/color_30"
            android:text="@string/send_btn"
            android:textSize="30dp" />

    </LinearLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frg_ch_lang"
        tools:layout_weight="1"
        android:name="com.example.bankapp.ChangeLanguagFragment"
        android:visibility="gone"
        />



</RelativeLayout>